# Litestar_StreamingResponseGzip_Bug

./: Dockerfile  README.md  pyproject.toml
app/: app.py
app/lib/: data_streamer.py
static/js/: event.js
templates/: event.html.jinja2
